# HelloCuda

./: .gitignore  CMakeLists.txt  main.cu
common/: gl_helper.h
lib/: freeglut_static.lib
src/: main.cu
